Task-3: Complete points 1 (Sum of tree-digits number), 2 (Create IT-Company), 3 (Build a Tank).

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 *.war
 *.ear
 
-#*.class
+*.class
 
 .idea/
 *.iml
@@ -13,6 +13,7 @@
 .project
 .settings/
 .springBeans
+**/out/**
 **/bin/**
 **/testbin/**
 **/target/**
