Task-7: Add properties and realization for on/off some actions from requirements. Add SerializeUtil and Actions (can be used in menu) for loading.

--- a/task-4/motor-service-center/src/main/resources/config.properties
+++ b/task-4/motor-service-center/src/main/resources/config.properties
@@ -3,3 +3,8 @@ mechanic = data/mechanic.csv
 order = data/order.csv
 tool = data/tool.csv
 spot = data/spot.csv
+modify.spot = false
+shift.order.time = false
+delete.order = false
+load.center = data/center.ser
+
