Task-7: Add "repository" and fix some bugs from previous verson

--- a/task-4/motor-service-center/src/main/resources/config.properties
+++ b/task-4/motor-service-center/src/main/resources/config.properties
@@ -3,7 +3,7 @@ mechanic = data/mechanic.csv
 order = data/order.csv
 tool = data/tool.csv
 spot = data/spot.csv
-modify.spot = false
+modify.spot = true
 shift.order.time = false
 delete.order = false
 load.center = data/center.ser
