Task-11: ERD diagram, script. Changed repository code for database.

--- a/task-4/motor-service-center/src/main/resources/config.properties
+++ b/task-4/motor-service-center/src/main/resources/config.properties
@@ -7,4 +7,7 @@ modify.spot = true
 shift.order.time = false
 delete.order = false
 load.center = data/center.ser
-
+db.driver=com.mysql.cj.jdbc.Driver
+db.url=jdbc:mysql://127.0.0.1/motor_service_service?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&serverTimezone=UTC
+db.user=root
+db.password=root
