--- a/task-4/motor-service-center/pom.xml
+++ b/task-4/motor-service-center/pom.xml
@@ -11,12 +11,38 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>motor-service-center</artifactId>
+    <properties>
+        <mysql.version>8.0.21</mysql.version>
+        <hibernate.version>5.4.21.Final</hibernate.version>
+        <hibernate.annotation.version>3.5.6-Final</hibernate.annotation.version>
+        <javax.transaction.version>1.1</javax.transaction.version>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>eu.senla.course</groupId>
             <artifactId>annotation</artifactId>
             <version>1.0.0</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-annotations</artifactId>
+            <version>${hibernate.annotation.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.transaction</groupId>
+            <artifactId>jta</artifactId>
+            <version>${javax.transaction.version}</version>
         </dependency>
     </dependencies>
 
