--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <java.version>1.8</java.version>
         <project.build.encoding>UTF-8</project.build.encoding>
         <maven.checkstyle.version>3.1.1</maven.checkstyle.version>
+        <jpamodelgen.version>5.4.21.Final</jpamodelgen.version>
     </properties>
 
     <dependencies>
@@ -67,6 +68,13 @@
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                     <encoding>${project.build.encoding}</encoding>
+                    <annotationProcessorPaths>
+                        <annotationProcessorPath>
+                            <groupId>org.hibernate</groupId>
+                            <artifactId>hibernate-jpamodelgen</artifactId>
+                            <version>${jpamodelgen.version}</version>
+                        </annotationProcessorPath>
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
         </plugins>
