Task-13: Change code according to the comments

--- a/task-4/motor-service-center/src/main/resources/hibernate.properties
+++ b/task-4/motor-service-center/src/main/resources/hibernate.properties
@@ -3,5 +3,5 @@ hibernate.connection.url = jdbc:mysql://127.0.0.1:3306/motor_service_service?use
 hibernate.connection.username = root
 hibernate.connection.password = root
 hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-hibernate.show_sql=false
+hibernate.show_sql=true
 hibernate.hbm2ddl.auto=update
