--- a/task-4/motor-service-center/pom.xml
+++ b/task-4/motor-service-center/pom.xml
@@ -24,6 +24,8 @@
         <mockito.junit.version>2.17.0</mockito.junit.version>
         <javax.servlet.version>4.0.1</javax.servlet.version>
         <jackson.version>2.11.2</jackson.version>
+        <spring.security.version>5.4.1</spring.security.version>
+        <jwt.token.version>0.9.1</jwt.token.version>
     </properties>
     <dependencies>
         <dependency>
@@ -85,6 +87,12 @@
             <version>${spring.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>${juint.version}</version>
@@ -134,6 +142,28 @@
             <artifactId>spring-jdbc</artifactId>
             <version>5.2.8.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>5.2.1.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>5.2.1.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>${jwt.token.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
+
     </dependencies>
     <build>
         <finalName>motor-service-center</finalName>
